# document_vqa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cards/: README_poetry.md  about_singularity.md  approved_dataset_format_for_vqa.md  datasets_for_the_benchmark.md  using_vlm_models_via_the_factory_method_in_vlmhyperbench.md  Задачи решаемые моделями VLLM для документов.md  Метрики для оценки работы моделей.md  Стили документации docstring в Python.md
docker/: Dockerfile-cu124
docs/: ml_system_design_doc.md
files/: ml_system_design_doc 2024-11-29 03.24.09.excalidraw.md
src/: model_utils.py  run_predict.py
