[tool.poetry]
name = "document-vqa"
version = "0.1.0"
description = ""
authors = ["Anton Shiryaev <a.shiryaev@cashalot.mcfef.ru>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch_сu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
black = "24.10.0"
pre-commit = "4.0.1"
ruff = "0.8.0"
torch = {version = "2.4.0", source = "torch_сu124"}
torchvision = {version = "0.19.0", source = "torch_сu124"}
accelerate = "1.0.1"
av = "13.1.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
einops = "0.8.0"
filelock = "3.13.1"
fsspec = "2024.2.0"
huggingface-hub = "0.26.2"
idna = "3.10"
jinja2 = "3.1.3"
markupsafe = "2.1.5"
mpmath = "1.3.0"
networkx = "3.1"
numpy = "1.26.3"
packaging = "24.2"
pillow = "10.2.0"
psutil = "6.1.0"
pyyaml = "6.0.2"
qwen-vl-utils = "0.0.8"
regex = "2024.11.6"
requests = "2.32.3"
safetensors = "0.4.5"
sympy = "1.13.1"
tokenizers = "0.20.4"
tqdm = "4.67.1"
transformers = "4.46.1"
triton = "3.0.0"
typing-extensions = "4.9.0"
urllib3 = "2.2.3"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E501"]  # Игнорировать предупреждения о длине строки

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | _build
  | buck-out
  | build
  | dist
  | .obsidian
  | cards
  | docker
  | docs
  | files
  | templates
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
